[project]
name = "autosupport-env"
version = "1.0.0"
description = "Customer Support AI Environment"
authors = [{ name = "Gagan SR" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
